fix alignment issue

--- a/app/assets/stylesheets/lands.scss
+++ b/app/assets/stylesheets/lands.scss
@@ -78,7 +78,7 @@
 }
 
 .lot-info-image {
-  max-height: 70vh;
+  max-height: 60vh;
   margin-bottom: 1em;
 }
 
@@ -114,4 +114,8 @@
   margin-bottom: 2em;
   display: flex !important;
   justify-content: center;
+}
+
+.locations-nearby {
+  max-width: 45%;
 }
